--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend server for LMS project",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["lms", "server", "backend"],
+  "author": "Sandeep Kumar Mehta",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
